[build-system]
requires = ["setuptools==80.9.0"]

[project]
name = "eth2spec"
dynamic = ["version"]
authors = [{ name = "ethereum" }]
description = "Ethereum consensus layer specifications package"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10, <3.14"
urls = { homepage = "https://github.com/ethereum/consensus-specs" }
dependencies = [
  "curdleproofs==0.1.2",
  "eth-typing==5.2.1",
  "eth-utils==5.3.1",
  "frozendict==2.4.6",
  "lru-dict==1.3.0",
  "marko==2.2.0",
  "milagro_bls_binding==1.9.0",
  "py_arkworks_bls12381==0.3.8",
  "py_ecc==8.0.0",
  "pycryptodome==3.23.0",
  "remerkleable @ git+https://github.com/ethereum/remerkleable@667eab00ecc3c25682c754dd72ad164fa8c1750e",
  "ruamel.yaml==0.18.15",
  "setuptools==80.9.0",
  "trie==3.1.0",
]

[project.optional-dependencies]
test = [
  "deepdiff==8.6.1",
  "pytest-cov==7.0.0",
  "pytest-html==4.1.1",
  "pytest-xdist==3.8.0",
  "pytest==8.4.2",
  "wrapt==2.0.1",
]
lint = [
  "codespell==2.4.1",
  "mdformat-gfm-alerts==2.0.0",
  "mdformat-gfm==0.4.1",
  "mdformat-ruff==0.1.3",
  "mdformat-toc==0.3.0",
  "mdformat==0.7.22",
  "mypy==1.18.2",
  "ruff==0.13.2",
]
generator = [
  "filelock==3.19.1",
  "minizinc==0.10.0",
  "pathos==0.3.4",
  "psutil==7.1.0",
  "pytest==8.4.2",
  "python-snappy==0.7.3",
  "rich==14.1.0",
  "tqdm==4.67.1",
]
docs = [
  "mdx-truly-sane-lists==1.3",
  "mkdocs-awesome-pages-plugin==2.10.1",
  "mkdocs-gen-files==0.5.0",
  "mkdocs-material==9.6.20",
  "mkdocs==1.6.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
ignore_missing_imports = true
# TODO(jtraglia): Remove these bandaids
no_implicit_optional = false
disable_error_code = ["empty-body"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "F",  # https://docs.astral.sh/ruff/rules/#pyflakes-f
  "I",  # https://docs.astral.sh/ruff/rules/#isort-i
  "PL", # https://docs.astral.sh/ruff/rules/#pylint-pl
  "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
ignore = [
  "PLR0911", # https://docs.astral.sh/ruff/rules/too-many-return-statements/
  "PLR0912", # https://docs.astral.sh/ruff/rules/too-many-branches/
  "PLR0913", # https://docs.astral.sh/ruff/rules/too-many-arguments/
  "PLR0915", # https://docs.astral.sh/ruff/rules/too-many-statements/
  "PLR1714", # https://docs.astral.sh/ruff/rules/repeated-equality-comparison/
  "PLR2004", # https://docs.astral.sh/ruff/rules/magic-value-comparison/
  "PLW0128", # https://docs.astral.sh/ruff/rules/redeclared-assigned-name/
  "PLW0603", # https://docs.astral.sh/ruff/rules/global-statement/
  "PLW2901", # https://docs.astral.sh/ruff/rules/redefined-loop-name/
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["eth2spec"]
order-by-type = false

[tool.setuptools.dynamic]
version = { file = "tests/core/pyspec/eth2spec/VERSION.txt" }
