[build-system]
requires = ["setuptools==82.0.1"]

[project]
name = "eth-consensus-specs"
dynamic = ["version"]
authors = [{ name = "ethereum" }]
description = "Ethereum consensus layer specifications package"
license = "CC0-1.0"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11, <3.15"
urls = { homepage = "https://github.com/ethereum/consensus-specs" }
dependencies = [
  "eth-remerkleable==0.1.29",
  "eth-utils==6.0.0",
  "frozendict==2.4.7",
  "lru-dict==1.4.1",
  "marko==2.2.2",
  "milagro_bls_binding==1.9.0",
  "py_arkworks_bls12381==0.4.1",
  "py_ecc==8.0.0",
  "ruamel.yaml==0.19.1",
  "setuptools==82.0.1",
]

[project.optional-dependencies]
test = [
  "ckzg==2.1.7",
  "deepdiff==9.0.0",
  "eth-hash[pycryptodome]==0.8.0",
  "psutil==7.2.2",
  "pytest-cov==7.1.0",
  "pytest-html==4.2.0",
  "pytest-sugar==1.1.1",
  "pytest-xdist==3.8.0",
  "pytest==9.0.3",
  "python-snappy==0.7.3",
  "trie==3.1.0",
]
lint = [
  "codespell==2.4.2",
  "mdformat-gfm-alerts==2.0.0",
  "mdformat-gfm==1.0.0",
  "mdformat-ruff==0.1.3",
  "mdformat-toc==0.5.0",
  "mdformat==1.0.0",
  "mypy==1.20.0",
  "ruff==0.15.9",
]
generator = [
  "minizinc==0.10.0",
  "pathos==0.3.5",
  "rich==14.3.3",
  "tqdm==4.67.3",
]
docs = [
  "mdx-truly-sane-lists==1.3",
  "mkdocs-awesome-pages-plugin==2.10.1",
  "mkdocs-gen-files==0.6.1",
  "mkdocs-material==9.7.6",
  "mkdocs==1.6.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
namespace-packages = ["scripts"]
src = ["."]

[tool.ruff.lint]
select = [
  "F",   # https://docs.astral.sh/ruff/rules/#pyflakes-f
  "I",   # https://docs.astral.sh/ruff/rules/#isort-i
  "INP", # https://docs.astral.sh/ruff/rules/#flake8-no-pep420-inp
  "PL",  # https://docs.astral.sh/ruff/rules/#pylint-pl
  "UP",  # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
ignore = [
  "PLR0911", # https://docs.astral.sh/ruff/rules/too-many-return-statements/
  "PLR0912", # https://docs.astral.sh/ruff/rules/too-many-branches/
  "PLR0913", # https://docs.astral.sh/ruff/rules/too-many-arguments/
  "PLR0915", # https://docs.astral.sh/ruff/rules/too-many-statements/
  "PLR1714", # https://docs.astral.sh/ruff/rules/repeated-equality-comparison/
  "PLR2004", # https://docs.astral.sh/ruff/rules/magic-value-comparison/
  "PLW0128", # https://docs.astral.sh/ruff/rules/redeclared-assigned-name/
  "PLW0603", # https://docs.astral.sh/ruff/rules/global-statement/
  "PLW2901", # https://docs.astral.sh/ruff/rules/redefined-loop-name/
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["eth_consensus_specs"]
order-by-type = false

[tool.setuptools.dynamic]
version = { file = "tests/core/pyspec/eth_consensus_specs/VERSION.txt" }
